8: fix warnings for dynamically loaded agenst